# hangar

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  flake.nix  io.github.sethcottle.Hangar.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: appimage.yml  ci.yml  flatpak.yml  release.yml
assets/: README.md
data/: io.github.sethcottle.Hangar.desktop  io.github.sethcottle.Hangar.gschema.xml  io.github.sethcottle.Hangar.metainfo.xml
src/: app.rs  config.rs  main.rs  runtime.rs
src/atproto/: client.rs  facets.rs  mod.rs  types.rs
src/cache/: db.rs  feeds.rs  images.rs  mod.rs  posts.rs  profiles.rs  schema.rs
src/state/: mod.rs  oauth.rs  session.rs  session_store.rs  settings.rs
src/ui/: avatar_cache.rs  compose_dialog.rs  login_dialog.rs  mod.rs  post_row.rs  sidebar.rs  style.css  window.blp  window.rs
