# SPDX-License-Identifier: MPL-2.0

[package]
name = "hangar"
version = "0.1.0"
edition = "2024"
authors = ["Seth Cottle"]
license = "MPL-2.0"
description = "A native Bluesky client for Linux"
repository = "https://github.com/sethcottle/hangar"
keywords = ["bluesky", "atproto", "gtk", "gnome", "social"]
categories = ["gui"]

[dependencies]
gtk4 = { version = "0.9", features = ["v4_6"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
atrium-api = { version = "0.24", features = ["agent", "namespace-chatbsky"] }
atrium-xrpc-client = { version = "0.5", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
open = "5"
thiserror = "2"
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }
chrono = "0.4"
once_cell = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
dirs = "5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }

# No build dependencies needed currently
# Blueprint compilation handled via build.rs if blueprint-compiler is available

[profile.release]
lto = true
codegen-units = 1
strip = true
